<?xml version="1.0" encoding="utf-8"?>

<!-- 首页 类似actionBar -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:background="#ffc7c7c7"
    android:visibility="invisible">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout"
        android:layout_margin="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back_btn"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_search"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:hint="@string/input_des"
            android:imeOptions="flagNoExtractUi" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_strategy"
            android:hint="@string/navi_strategy_speed" android:minWidth="185dp" android:layout_gravity="center"/>

    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/search_list"
        android:background="#ffffffff"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/history_list"
        android:layout_below="@+id/linearLayout"
        android:background="#ffffffff"
        android:layout_centerHorizontal="true" />

</RelativeLayout>